/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
   * source/rtl/filesys.c
     ! Re-disabled native Win32 file handling system.
     ! hb_fsCommit() fixed Win32 branch, and put it
       in the right place multiplatform #define-wise.

   * source/rtl/profiler.prg
     * No more file limit on Win32  

   * source/vm/memvars.c
     ! Fixed warnings in __MVEXIST()

2002-01-03 17:00 UTC+0700 Andi Jahja <harbour@cbn.net.id>
   * source/vm/fm.c
     ! restore original copy as it caused memory leak in Windows OS
       as reported by Sid 'Saylor'. Now hb_xgrab() problem when running
       hbtest.exe which compiled with -DHB_FMSTATISTICS_OFF ( harbour.exe
       and libraries were also compiled with the same switch ) remains
       open :(

2002-01-03 00:40 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
   * include/hbfsapi.h
     * under Win32 FHANDLE is typedef to long
   * source/rtl/filesys.c
     * Replaced all X__WIN32__ with __WIN32__
     * hb_fscommit() now used true Win32 Api calls
     * No more file limit on Win32

2002-01-02 09:40 UTC+0200 Chen Kedem <niki@actcom.co.il>

   * doc/dirstruc.txt
     + Add description for newly added directories

2002-01-02 10:03 UTC+0700 Andi Jahja <harbour@cbn.net.id>
   * source/compiler/cmdcheck.c
     ! harbour did not obey "set clippercmd=/n" -> fixed ( my fault, sorry )

2002-01-02 09:06 UTC+0700 Andi Jahja <harbour@cbn.net.id>
   * source\vm\fm.c
     * function hb_xalloc() - Prevention for same symptom as noted on hb_xgrab():
       (see ChangeLog : 2002-01-01 11:15 UTC+0700 Andi Jahja <harbour@cbn.net.id> )
       modify memory allocation by adding extra bytes to be allocated
       in line with byte alignment.
   * include/hbcomp.h
     + BOOL hb_comp_bNoStartUp, public variable for generating C-source with for